[ci] add a windows-x64 pole; run kyo-aeron on one transport everywhere
## Problem

CI ran only on Linux, so none of kyo's cross-platform behavior was exercised on Windows even though JVM, JS, and Wasm are all supported Windows targets. That left a class of bugs latent and unreachable. Some are genuinely Windows-specific (path separators, process termination, sleep-timer resolution). Others were latent on every platform and simply never triggered by a Linux runner: a flag value whose characters were reinterpreted as a rollout expression, a scheduler scan that skipped workers above a shrunken pool, and a source-position crash on CRLF files. The second group is the reason this is worth more than checkbox coverage: the runner surfaced real correctness bugs that affect all platforms.

The deepest of them was in kyo-aeron, and it is why this change is larger than a CI matrix. kyo-aeron bound Aeron twice: the JVM ran io.aeron's Java reimplementation while Native, JS, and Wasm ran the C reference library through a shim. Every transport change had to be written twice, and the two implementations drifted. They did: the JVM's re-derivation of the shim's close-vs-operation guard drained publications by iterating a concurrent set, so a publication registered while the drain ran was never sealed, and its in-flight `offer` wrote into a term buffer that closing the client had already unmapped. That crashed the JVM on Windows CI, and reproduces identically on macOS with the same stack, so it was never a Windows bug at all.

## Solution

`ci.yml` now derives os poles rather than Linux arches: `linux-x64`, `linux-arm64`, and `windows-x64`, each carrying its own supported targets. windows-x64 runs JVM and JS. Native stays Linux-only because its libcurl/libh2o/openssl toolchain is apt-provisioned, and Wasm is excluded for the reason in the notes. The setup action provisions the Windows environment (MSVC for the aeron shim, MinGW `CC` for the FFI C tests, an sbt shim so Git Bash resolves